ffi: replace coffi with babashka/ffi